# mcp_tools

./: .gitignore  CLAUDE.md  README.md  check_mcp.py  check_mss.py  combined_screenshot_describe.py  debug_results.json  mss_screenshot.py  pyproject.toml  run_screenshot_server.py  run_task_manager_server.py  setup_libs.py  test_describe_image.py  test_describe_image_with_models.py  test_mcp_screenshot.py  test_screenshot_package.py
.claude/commands/: init.md
archive/: .mcp copy.json  claude_mcp_screenshot copy 2.py  claude_mcp_screenshot copy.py  claude_mcp_screenshot.py  claude_mcp_screenshot_json_rpc.py  mcp_handshake.py
dev/: mss_test.py  try_mss.py  validate_screenshot_tool.py
docs/: TASK_RUNNER.md
examples/: take_screenshot.py
examples/gitget/: README.md  __init__.py  gitgit.py  integration_api.py  repo_directory_manager.py  text_chunker.py  text_summarizer.py  tree_sitter_utils.py  verify_integration.py
examples/gitget/docs/: CHANGELOG.md  ERROR_HANDLING.md  INTEGRATION_PLAN.md
examples/gitget/utils/: __init__.py  directory_manager.py  enhanced_logger.py  error_handler.py  initialize_litellm_cache.py  json_utils.py  workflow_logger.py  workflow_tracking.py
libs/claude_task_manager/: __init__.py  cli.py  fast_mcp_wrapper.py  mcp_diagnostic.py  mcp_schema.py  pyproject.toml  task_manager.py  types.py
results/: 001_data_analysis.result  002_code_review.result
scripts/: build_standalone.py
src/claude_mcp_tools/llm_call/: describe_image.py  initialize_litellm_cache.py
src/claude_mcp_tools/screenshot/: __init__.py  mss.py
src/mcp_tools/: __init__.py
src/mcp_tools/arangodb/: ARCHITECTURE_VIOLATIONS.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  REFACTORING_SUMMARY.md  REFACTOR_PLAN.md  VALIDATION_REPORT.md  __init__.py  arango_setup.py  cli.md  cli.py  cli_task.md  cli_validator.py  cli_verification.py  config.py  db_operations.py  db_operations_with_embedding.py  embedded_db_operations.py  enhanced_relationships.py  memory_commands.py  message_history_config.py  test_db_operations.py  verify.py  verify_validator.py
src/mcp_tools/context7/: .dockerignore  Dockerfile  api.py  arango_setup.py  config.py  core copy.py  core.py  docker-compose.yml  embedding_utils.py  file_discovery.py  g.json  html_extractor.py  image_processing_utils.py  initialize_litellm_cache.py  litellm_call.py  log_utils.py  main.py  markdown_extractor.py  models.py  multimodal_utils.py  notebook_extractor.py  orchestrate copy.py  orchestrate.py  output.ipynb  playwright_fetch.py  scratch.py  (+7 more)
standalone/: mss_screenshot.py  mss_screenshot_with_description.py  standalone_screenshot.py
tasks/: 001_data_analysis.md  002_code_review.md  003_context_isolation_test.md
tasks/screenshot/: PROMPT.md  README.md  claude_task_poc.sh  claude_tasks.py  orchestrator.sh  project_template.sh  run_project.sh  run_task.sh  task_breakdown.sh
utils/: convert_image.py  log_utils.py
(+174 files in other folders)
